--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
 <div class="container-fluid">
-    <div class="row">
+    <div class="row justify-content-md-center">
         <div class="col-md-3 col-xs-12">
             <div class="row">
                 <img style="position: absolute;top: 0;z-index: 0" src="image/lover1.jpg">
