--- a/index.html
+++ b/index.html
@@ -33,7 +33,14 @@
         }
 
         * {
-            color: white;
+            color: #222222;
+        }
+
+        h1{
+            font-size: 5em;
+        }
+        p{
+            font-weight: 800;
         }
     </style>
 </head>
