--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script type="text/javascript" src="http://cdn.webfont.youziku.com/wwwroot/js/wf/youziku.api.min.js"></script>
+    <script type="text/javascript">
+        $youziku.load("body", "67fda1f6d86b48d7a2f015f1a9e53664", "Source-Han-Light");
+        $youziku.load("body", "67fda1f6d86b48d7a2f015f1a9e53664", "Source-Han-Light");
+        $youziku.draw();
+    </script>
     <style>
         img {
             width: 100%;
