--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         }
 
         * {
-            color: #424242;
+            color: white;
             font-weight: 800;
         }
 
@@ -58,16 +58,11 @@
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <div style="position: absolute;top: 10vh;text-align: center;width: 100%">
+                    <div style="position: absolute;top: 6vh;text-align: center;width: 100%">
                         <h1><span id="time"></span></h1>
                         <p>我们相爱第
                             <span id="loverDate"></span>
                             天</p>
-                    </div>
-                    <div style="position: absolute;bottom: 10px;text-align: center;width: 100%">
-                        <p>
-                            dd
-                        </p>
                     </div>
                 </div>
             </div>
