--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="col-xs-12">
                     <div style="position: absolute;top: 6vh;text-align: center;width: 100%">
                         <h1><span id="time"></span></h1>
-                        <p>我们相爱第
+                        <p>我们已相爱
                             <span id="loverDate"></span>
                             天</p>
                     </div>
