--- a/index.html
+++ b/index.html
@@ -68,12 +68,15 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="button">dd</div>
+    </div>
 </div>
 
 <script>
     let dom = document.getElementById('img')
 
-    let pics = ['lover1.jpg', 'lover2.jpg', 'lover3.jpg', 'lover4.jpg', 'lover5.jpg', 'lover6.jpg']
+    let pics = ['lover1.jpg', 'lover2.jpg', 'lover3.jpg']
 
     window.onload = function f() {
         let random = parseInt(Math.random() * pics.length)
